--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,7 +63,7 @@
       margin: 10px 0;
       border-radius: 8px;
       border: none;
-      font-size: 12px;
+      font-size: 20px;
       background-color: #374151;
       color: #ffffff;
     }
@@ -197,7 +196,7 @@
             <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent also the 2-min response threshold from ${parts[0]} until chat ended (due user inactivity) on ${parts[1]} (${resultText}).</p>
             <p style="margin-bottom:50px !important; font:size: 12px;">Response threshold/GBE10 - The agent also the 2-min response threshold from ${parts[0]} until chat ended (due chat ended by user) on ${parts[1]} (${resultText}).</p>
             <p style="margin-bottom:1px !important; font:size: 12px;">PreEndChat/GBE12 - The agent failed to utilize the PreEndChat button. The agent could've clicked the PreEndChat button after providing the solution.</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">FAQ Link/SOP05 - The agent failed to provide FAQ Link. The agent could've provided HC link/s as per the corresponding eKB and/or Revamped RC Codes related to the user's concern.</p>
+            <p style="margin-bottom:1px !important; font:size: 12px;">FAQ Link/SOP05 - The agent failed to provide FAQ Link. The agent could've provided HC link/s as per the corresponding eKB and/or Revamped Codes which is related to the user's concern.</p>
             <p style="margin-bottom:1px !important; font:size: 12px;">SOPA/SOP31 – The agent failed to utilize SOPA within the interaction. The agent could have utilized SOPA during the interaction to provide accurate information.</p>
           </div>`;
         
