--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       margin: 10px 0;
       border-radius: 8px;
       border: none;
-      font-size: 17px;
+      font-size: 15px;
       background-color: #374151;
       color: #ffffff;
     }
@@ -117,7 +117,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="font-size:17px;">Response Threshold Calculator</h1>
+    <h1 style="font-size:15px;">Response Threshold Calculator</h1>
     <p>Enter time in format: HH:MM:SS to HH:MM:SS</p>
     <input type="text" id="timeRange" placeholder="e.g., 10:53:20 to 10:55:43" />
     <div id="result"></div>
@@ -195,10 +195,8 @@
             <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent failed the 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}).</p>
             <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent also the 2-min response threshold from ${parts[0]} until chat ended (due user inactivity) on ${parts[1]} (${resultText}).</p>
             <p style="margin-bottom:50px !important; font:size: 12px;">Response threshold/GBE10 - The agent also the 2-min response threshold from ${parts[0]} until chat ended (due chat ended by user) on ${parts[1]} (${resultText}).</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">PreEndChat/GBE12 - The agent failed to utilize the PreEndChat button. The agent could've clicked the PreEndChat button after providing the solution.</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">FAQ Link/SOP05 - The agent failed to provide FAQ Link. The agent could've provided HC link/s as per the corresponding eKB and/or Revamped Codes which is related to the user's concern.</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">SOPA/SOP31 – The agent failed to utilize SOPA within the interaction. The agent could have utilized SOPA during the interaction to provide accurate information.</p>
-          </div>`;
+            <p style="margin-bottom:1px !important; font:size: 12px;">Hold SOP/GBE08 - The agent failed to get back to the user within 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}) after placing the chat on hold.</p>
+    
         
         addCopyButtons(); // add buttons each time result is generated
       }
