--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent also the 2-min response threshold from ${parts[0]} until chat ended (due user inactivity) on ${parts[1]} (${resultText}).</p>
             <p style="margin-bottom:50px !important; font:size: 12px;">Response threshold/GBE10 - The agent also the 2-min response threshold from ${parts[0]} until chat ended (due chat ended by user) on ${parts[1]} (${resultText}).</p>
             <p style="margin-bottom:1px !important; font:size: 12px;">Hold SOP/GBE08 - The agent failed to get back to the user within 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}) after placing the chat on hold.</p>
-    
+    </div>`;
         
         addCopyButtons(); // add buttons each time result is generated
       }
