--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <body>
   <div class="container">
     <h1 style="font-size:25px;">Response Threshold Calculator</h1>
-    <p>Enter time in format: HH:MM:SS - HH:MM:SS</p>
-    <input type="text" id="timeRange" placeholder="e.g., 10:53:20 - 10:55:43" />
+    <p>Enter time in format: HH:MM:SS to HH:MM:SS</p>
+    <input type="text" id="timeRange" placeholder="e.g., 10:53:20 to 10:55:43" />
     <div id="result"></div>
   </div>
 
@@ -172,7 +172,7 @@
       const inputBox = this;
       if (event.key === 'Enter') {
         const input = this.value.trim();
-        const parts = input.split(' - ').map(p => p.trim());
+        const parts = input.split(' to ').map(p => p.trim());
 
         if (parts.length !== 2 || !/^\d{2}:\d{2}:\d{2}$/.test(parts[0]) || !/^\d{2}:\d{2}:\d{2}$/.test(parts[1])) {
           document.getElementById('result').innerText = "⚠️Please enter time as: HH:MM:SS - HH:MM:SS";
