--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Response Threshold Calculator</title>
-<link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/000000/calculator.png">
+  <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/000000/calculator.png">
   <style>
     body {
       background: radial-gradient(circle at top, #38bdf8 0%, #0f172a 100%);
@@ -19,13 +19,7 @@
       margin: 0;
     }
 
-    <!-- @keyframes waveOcean {
-      0% { background-position: 0% 0%; }
-      50% { background-position: 100% 100%; }
-      100% { background-position: 0% 0%; }
-    } -->
-
-   @keyframes waveOcean {
+    @keyframes waveOcean {
       0%   { background-position: 0% 0%; }
       25%  { background-position: 100% 0%; }
       50%  { background-position: 100% 100%; }
@@ -45,14 +39,8 @@
       max-width: 95vw;
     }
 
-    <!-- h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #ffffff;
-    } -->
-
     h1 {
-      font-size: 3rem;
+      font-size: 25px;
       text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
     }
 
@@ -89,7 +77,7 @@
       color: #0ea5e9;
     }
 
-    #copyMessage {
+    .notification {
       position: fixed;
       bottom: 20px;
       left: 50%;
@@ -98,9 +86,19 @@
       color: white;
       padding: 10px 20px;
       border-radius: 8px;
-      font-size: 14px;
-      display: none;
+      font-size: 16px;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      z-index: 1000;
+    }
+
+    .notification.show {
+      opacity: 1;
+    }
+
+    .notification.error {
+      background: #ef4444;
     }
 
     .shake {
@@ -117,13 +115,14 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="font-size:25px;">Response Threshold Calculator</h1>
+    <h1>Response Threshold Calculator</h1>
     <p>Enter time in format: HH:MM:SS to HH:MM:SS</p>
     <input type="text" id="timeRange" placeholder="e.g., 10:53:20 to 10:55:43" />
     <div id="result"></div>
   </div>
 
-  <div id="copyMessage" style="font-size: 20px;">✅Successfully Copied!</div>
+  <!-- General notification -->
+  <div id="notification" class="notification"></div>
 
   <script>
     function parseTimeString(timeStr) {
@@ -141,10 +140,18 @@
       return result;
     }
 
-    function showCopyMessage() {
-      const msg = document.getElementById("copyMessage");
-      msg.style.display = "block";
-      setTimeout(() => { msg.style.display = "none"; }, 2000);
+    function showNotification(message, isError = false) {
+      const note = document.getElementById("notification");
+      note.textContent = message;
+      note.classList.toggle("error", isError);
+
+      note.classList.add("show");
+      note.style.opacity = "1";
+
+      setTimeout(() => {
+        note.style.opacity = "0";
+        setTimeout(() => note.classList.remove("show"), 5000); // fully hide after fade-out
+      }, 3000);
     }
 
     function addCopyButtons() {
@@ -160,10 +167,10 @@
           btn.className = "copy-btn";
           btn.onclick = () => {
             navigator.clipboard.writeText(text).then(() => {
-              showCopyMessage();
+              showNotification("Success!");
             });
           };
-          p.prepend(btn); // put button before the sentence
+          p.prepend(btn);
         }
       });
     }
@@ -175,9 +182,10 @@
         const parts = input.split(' to ').map(p => p.trim());
 
         if (parts.length !== 2 || !/^\d{2}:\d{2}:\d{2}$/.test(parts[0]) || !/^\d{2}:\d{2}:\d{2}$/.test(parts[1])) {
-          document.getElementById('result').innerText = "⚠️Please enter time as: HH:MM:SS - HH:MM:SS";
+          document.getElementById('result').innerText = "⚠️Invalid response threshold format!";
           inputBox.classList.add('shake');
           setTimeout(() => inputBox.classList.remove('shake'), 400);
+          showNotification("Failed! Check the correct format (HH:MM:SS to HH:MM:SS).", true);
           return;
         }
 
@@ -191,14 +199,15 @@
         document.getElementById('result').innerHTML = `
           <div style='margin-bottom: 10px; font-size: 30px; color: ${color}; text-align: center; font-family: arial; font-weight: bold;'>${resultText}</div>
           <div>
-            <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent failed the 15-sec response threshold from ${parts[0]} to ${parts[1]} (${resultText}).</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent failed the 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}).</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent also failed the 2-min response threshold from ${parts[0]} until chat ended (due user inactivity) on ${parts[1]} (${resultText}).</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">Response threshold/GBE10 - The agent also failed the 2-min response threshold from ${parts[0]} until chat ended (due chat ended by user) on ${parts[1]} (${resultText}).</p>
-            <p style="margin-bottom:1px !important; font:size: 12px;">Hold SOP/GBE08 - The agent failed to get back to the user within 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}) after placing the chat on hold.</p>
-    </div>`;
+            <p>Response threshold/GBE10 - The agent failed the 15-sec response threshold from ${parts[0]} to ${parts[1]} (${resultText}).</p>
+            <p>Response threshold/GBE10 - The agent failed the 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}).</p>
+            <p>Response threshold/GBE10 - The agent also failed the 2-min response threshold from ${parts[0]} until chat ended (due user inactivity) on ${parts[1]} (${resultText}).</p>
+            <p>Response threshold/GBE10 - The agent also failed the 2-min response threshold from ${parts[0]} until chat ended (due chat ended by user) on ${parts[1]} (${resultText}).</p>
+            <p>Hold SOP/GBE08 - The agent failed to get back to the user within 2-min response threshold from ${parts[0]} to ${parts[1]} (${resultText}) after placing the chat on hold.</p>
+          </div>`;
         
-        addCopyButtons(); // add buttons each time result is generated
+        addCopyButtons();
+        showNotification("Success! The response threshold result is now available!");
       }
     });
   </script>
