--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         // check duplicate entry
         if (input === lastInput) {
-          showNotification("Noticed! Same result found. Enter a new response threshold format.", "warning");
+          showNotification("Notice! Same result found. Enter a new response threshold format.", "warning");
           return;
         }
 
